--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.4.0",
     "@aws-sdk/client-s3": "^3.428.0",
     "@fingerprintjs/fingerprintjs": "^4.2.2",
     "@heroicons/react": "^2.1.1",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.10.2",
     "dotenv": "^16.3.1",
     "next": "^14.1.0",
+    "next-auth": "^4.24.6",
+    "nodemailer": "^6.9.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.6",
@@ -26,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.6",
+    "@types/nodemailer": "latest",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
