--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10",
+    "cypress": "^13.6.6",
     "eslint": "^8",
     "eslint-config-next": "^14.1.0",
     "postcss": "^8",
     "prisma": "^5.4.2",
+    "smtp-tester": "^2.1.0",
     "tailwindcss": "^3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
