add image slider on product detail page

--- a/.env
+++ b/.env
@@ -13,5 +13,5 @@ EMAIL_HOST=gmail
 EMAIL_USER=test@gmail.com
 EMAIL_PASSWORD=xxxxxxx
 NEXTAUTH_SECRET=secret247420
-
+PROJECT_NAME=ergonomica
 NMI_SECURITY_KEY=6457Thfj624V5
