--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5",
     "sharp": "^0.32.6",
+    "swiper": "^11.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
