--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,13 @@ services:
       PGDATA: /data/postgres
     volumes:
        - postgres:/data/postgres
+       - ./initdb:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
     networks:
       - postgres
     restart: unless-stopped
+    
   
   minio:
     image: minio/minio
