--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@fingerprintjs/fingerprintjs": "^4.2.2",
     "@formatjs/intl-localematcher": "^0.5.4",
     "@heroicons/react": "^2.1.1",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.2",
     "@prisma/client": "^5.10.2",
+    "@types/mdx": "^2.0.13",
     "dotenv": "^16.3.1",
     "negotiator": "^0.6.3",
     "next": "^14.1.0",
