--- a/package.json
+++ b/package.json
@@ -16,20 +16,26 @@
     "@auth/prisma-adapter": "^1.4.0",
     "@aws-sdk/client-s3": "^3.428.0",
     "@fingerprintjs/fingerprintjs": "^4.2.2",
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.10.2",
     "dotenv": "^16.3.1",
+    "i18next": "^23.11.3",
+    "negotiator": "^0.6.3",
     "next": "^14.1.0",
     "next-auth": "^4.24.6",
+    "next-i18next": "^15.3.0",
     "nodemailer": "^6.9.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "react-toastify": "^10.0.5",
     "sharp": "^0.32.6",
-    "uuid": "^9.0.1",
-    "swiper": "^11.1.0"
+    "swiper": "^11.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20.8.6",
     "@types/nodemailer": "latest",
     "@types/react": "^18",
