--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^1.4.0",
     "@aws-sdk/client-s3": "^3.428.0",
     "@fingerprintjs/fingerprintjs": "^4.2.2",
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.10.2",
     "dotenv": "^16.3.1",
