--- a/prisma/tsconfig.json
+++ b/prisma/tsconfig.json
@@ -3,7 +3,8 @@
       "esModuleInterop": true,
       "target": "es5",
       "lib": ["es5", "dom"],
-      "types": ["node"]
+      "types": ["node"],
+      "resolveJsonModule": true
     },
-    "include": ["**/*.ts"]
+    "include": ["**/*.ts", "../monday/createBoards.ts"]
 }
