--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "negotiator": "^0.6.3",
     "next": "^14.1.0",
     "next-auth": "^4.24.6",
+    "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
