--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "@heroicons/react": "^2.1.1",
     "@next/mdx": "^14.2.2",
-    "@prisma/client": "^5.15.0",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@prisma/client": "^5.10.2",
     "@types/mdx": "^2.0.13",
     "dotenv": "^16.3.1",
     "negotiator": "^0.6.3",
@@ -27,6 +28,7 @@
     "next-auth": "^4.24.6",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.10",
+    "posthog-js": "^1.135.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5",
