--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "@heroicons/react": "^2.1.1",
     "@next/mdx": "^14.2.2",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.15.0",
     "@types/mdx": "^2.0.13",
     "dotenv": "^16.3.1",
