--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 services:
   postgres:
-    image: postgres
+    image: postgres:17
     environment:
       POSTGRES_DB: ergonomica
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
@@ -10,6 +10,18 @@ services:
     ports:
       - "5432:5432"
     restart: unless-stopped
+    entrypoint: |
+      bash -c "
+      docker-entrypoint.sh postgres &
+      until pg_isready -h localhost -p 5432 -U postgres; do
+        echo 'Waiting for Postgres to be ready...'
+        sleep 2;
+      done;
+      if ! psql -h localhost -p 5432 -U postgres -d ergonomica -c \"SELECT * FROM pg_extension WHERE extname = 'pg_trgm';\" | grep -q 'pg_trgm'; then
+        psql -h localhost -p 5432 -U postgres -d ergonomica -c 'CREATE EXTENSION IF NOT EXISTS pg_trgm;';
+      fi
+      wait
+      "
 
   minio:
     image: minio/minio
@@ -29,10 +41,13 @@ services:
       - sh 
       - -c
       - |
+        cat prisma/seed.ts
+        cat package.json
+        npx prisma generate
         npx prisma db push
-        npx prisma db seed
+        npx ts-node prisma/seed.ts
         npm run build
-        npm run e2e:headless:chrome
+        npm run e2e:headless
     ports:
       - "3000:3000"
     environment:
@@ -48,7 +63,10 @@ services:
       NEXT_PUBLIC_IMAGE_HOST: http://minio:9000/ergonomica-media
       NMI_SECURITY_KEY: 6457Thfj624V5r7WUwc5v6a68Zsd6YEm
       PROJECT_NAME: ergonomica
-
+      NEXT_PUBLIC_LEAD_COOKIE: ergo_lead_id
+      NEXT_PUBLIC_CART_COOKIE: ergo_cart_id
+      AWS_REGION: us-east-1
+      AWS_DEFAULT_REGION: us-east-1
     depends_on:
       - postgres
       - minio
