--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.5'
 services:
   postgres:
     container_name: postgres_container
-    image: postgres
+    image: postgres:17
     environment:
       POSTGRES_DB: ergonomica
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
