--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -41,8 +41,6 @@ services:
       - sh 
       - -c
       - |
-        cat prisma/seed.ts
-        cat package.json
         npx prisma generate
         npx prisma db push
         npx ts-node prisma/seed.ts
@@ -65,6 +63,7 @@ services:
       PROJECT_NAME: ergonomica
       NEXT_PUBLIC_LEAD_COOKIE: ergo_lead_id
       NEXT_PUBLIC_CART_COOKIE: ergo_cart_id
+      S3_BUCKET_NAME: ergonomica-media
       AWS_REGION: us-east-1
       AWS_DEFAULT_REGION: us-east-1
     depends_on:
