--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@next/mdx": "^14.2.16",
     "@prisma/client": "^5.21.1",
     "dotenv": "^16.4.5",
+    "geoip-lite": "^1.4.10",
     "negotiator": "^1.0.0",
     "next": "^14.2.16",
     "next-auth": "4.24.8",
@@ -43,6 +44,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/geoip-lite": "^1.4.4",
     "@types/mdx": "^2.0.13",
     "@types/negotiator": "latest",
     "@types/node": "^20.8.6",
